# Clipper2

./: .gitignore  .gitmodules  DEBIAN_PACKAGING.md  README.md
.github/workflows/: actions_cpp.yml  actions_csharp.yml
Beta_v1.1/: Readme.txt
Beta_v1.1/CPP/: clipper.engine.cpp  clipper.engine.h
Beta_v1.1/Delphi/: Clipper.Core.pas  Clipper.Engine.pas
BinaryUtils/Win64/: PointPlotter.md
CPP/: .gitignore  CMakeLists.txt  CMakeSettings.json  Clipper2.pc.cmakein  GoogleTest in Visual Studio.txt  MS Visual Studio.md  README.md  readme.txt
CPP/BenchMark/: CMakeLists.txt  CoedgeBenchmark.cpp  GetIntersectPtBenchmark.cpp  PointInPolygonBenchmark.cpp  README.md  StripDuplicateBenchmark.cpp
CPP/BenchMark/common/: BenchMarkUtils.h
CPP/Clipper2Lib/: clipper.core.cpp  clipper.core.h  clipper.engine.cpp  clipper.engine.h  clipper.h  clipper.minkowski.h  clipper.offset.cpp  clipper.offset.h  clipperdll.h
CPP/Clipper2Lib/detail/: clipper_engine_detail.h
CPP/Clipper2Lib/include/clipper2/: clipper.allocator.h  clipper.core.h  clipper.engine.h  clipper.export.h  clipper.h  clipper.math.h  clipper.minkowski.h  clipper.offset.h  clipper.rectclip.h  clipper.version.h
CPP/Clipper2Lib/src/: clipper.engine.cpp  clipper.export.cpp  clipper.offset.cpp  clipper.rectclip.cpp  clipper.triangulation.cpp
CPP/Examples/: clipper.svg.cpp  clipper.svg.h  clipper.svg.utils.h
CPP/Examples/Benchmarks/: Benchmarks.cpp
CPP/Examples/ConsoleDemo1/: ConsoleDemo1.cpp  ConsoleDemo1.vcxproj  ConsoleDemo1_cpp.sln  TextFileLoader.cpp  TextFileLoader.h
CPP/Examples/ConsoleDemo2/: ConsoleDemo2.cpp
CPP/Examples/Inflate/: Inflate.cpp
CPP/Examples/InflateDemo/: InflateDemo.vcxproj  InflateDemo1.cpp  InflateDemoApp.sln
CPP/Examples/MemLeakTest/: MemLeakTest.cpp
CPP/Examples/PolygonSamples/: PolygonSamples.cpp
CPP/Examples/RandomClipping/: RandomClipping.cpp
CPP/Examples/RandomClipping2/: RandomClipping2.cpp
CPP/Examples/RectClipDemo/: RectClipDemo1.cpp
CPP/Examples/RectClipping/: RectClipping.cpp
CPP/Examples/SimpleClipping/: SimpleClipping.cpp
CPP/Examples/Triangulation/: Triangulation.cpp
CPP/Examples/UnionClipping/: UnionClipping.cpp
CPP/Examples/UsingZ/: UsingZ.cpp  UsingZ1.cpp
CPP/Examples/VariableOffset/: VariableOffset.cpp
CPP/Examples/VariadicOffset/: VariadicOffset.cpp
CPP/Tests/: TestExportHeaders.cpp  TestInitiators.cpp  TestIsCollinear.cpp  TestLines.cpp  TestOffsetOrientation.cpp  TestOffsets.cpp  TestOrientation.cpp  TestPolygons.cpp  TestPolytreeHoles.cpp  TestPolytreeHoles1.cpp  TestPolytreeHoles2.cpp  TestPolytreeHoles3.cpp  TestPolytreeHoles4.cpp  TestPolytreeIntersection.cpp  TestPolytreeUnion.cpp  TestRandomPaths.cpp  TestRect.cpp  TestRectClip.cpp  TestSimplifyPath.cpp  TestTrimCollinear.cpp  TestWindows.cpp
CPP/Tests/Tests/: TestFromTextFile.cpp  TestFromTextFile2.cpp  TestFromTextFile3.cpp  TestHoleOwnership.cpp  TestHoleOwnership2.cpp  TestIntersection.cpp  TestIssue62.cpp  TestIssueReportedInPR120.cpp  TestLines.cpp  TestOffset.cpp  TestOffsetOrientation.cpp  TestOpenPath.cpp  TestOrientation.cpp  TestPolygons.cpp  TestPolytreeHoles1.cpp  TestPolytreeHoles2.cpp  TestPolytreeIntersection.cpp  TestPolytreeUnion.cpp  TestRandomPaths.cpp  TestRandomPolygons.cpp  TestTrimCollinear.cpp  TestUnion.cpp
CPP/Tests/VisualStudio/: Tests.vcxproj  Tests.vcxproj.filters  Tests_RO.vcxproj  Tests_cpp.sln
CPP/Utils/: ClipFileLoad.cpp  ClipFileLoad.h  ClipFileSave.cpp  ClipFileSave.h  Colors.h  CommonUtils.h  TextFileLoad.cpp  TextFileLoad.h  TextFileLoader.cpp  TextFileLoader.h  TextFileSave.cpp  TextFileSave.h  Timer.h  clipper.svg.cpp  clipper.svg.h  clipper.svg.utils.h
CPP/cmake/win64/: README.md  win64_vs2019_solution.bat  win64_vs2022_solution.bat
CSharp/: .editorconfig  .gitignore  Clipper.Core.cs  Clipper.Engine.cs  Clipper.Offset.cs  Clipper.cs  Clipper2Lib.sln  Directory.Build.props
CSharp/Benchmark/: Benchmark.csproj  Benchmarks.cs
CSharp/Clipper2Lib/: Clipper.Core.cs  Clipper.Engine.cs  Clipper.Minkowski.cs  Clipper.Offset.cs  Clipper.RectClip.cs  Clipper.SVG.cs  Clipper.Triangulation.cs  Clipper.cs  Clipper2.snk  Clipper2Lib.csproj  HashCode.cs  PooledList.cs
CSharp/Clipper2Lib.Benchmark/: Benchmarks.cs  Clipper2Lib.Benchmark.csproj  Program.cs
CSharp/Clipper2Lib.Tests/: Clipper2Lib.Tests.csproj
CSharp/Clipper2LibExample/: Clipper.SVG.cs  Clipper2LibExample.csproj  Program.cs
CSharp/NuGet/: README.md
CSharp/Tests/: README.md
CSharp/TryClipper/: Program.cs  TryClipper.csproj  _Imports.razor
CSharp/USINGZ/: Clipper.Minkowski.cs  Clipper.cs  Clipper2LibZ.csproj  Clipper2LibZ.sln  Clipper2Lib_Z.csproj
CSharp/USINGZ.TestApp/: Program.cs  UsingZTestApp.csproj  UsingZ_TestApp.sln
DLL/: Clipper2.lib  Clipper2_32.lib  Clipper2_64.lib  ReadMe.md
DLL/CPP_DLL/: Clipper2ZDll.vcxproj  Clipper2_DLL.sln  Clipper2_Dll.vcxproj  Clipper2_Export.vcxproj  Clipper2_Z_DLL.sln  dllmain.cpp
DLL/CSharp_TestApp/: CSharp_TestApp.sln  Program.cs
DLL/CSharp_TestApp2/: CSharp_TestApp2.csproj  CSharp_TestApp2.sln  Program.cs
DLL/Delphi/: Test_DLL.dpr  Test_DLL.dproj
DLL/Delphi_TestApp/: Clipper.SVG.pas  Colors.pas  SvgWriter.pas  Test_DLL.dpr  Test_DLL.dproj  Tests.groupproj  Timer.pas
DLL/Delphi_interface/: Clipper.DLL.Data.pas  Clipper.DLL.Enums.pas  Clipper.DLL.inc  Clipper.DLL.pas
Delphi/: Clipper.Core.pas  Clipper.Engine.pas  Clipper.Minkowski.pas  Clipper.Offset.pas  Clipper.SVG.pas  Clipper.inc  Clipper.pas
Delphi/BenchMark/: DelphiBenchmark.dpr  DelphiBenchmark.dproj
Delphi/Clipper2Lib/: Clipper.Core.pas  Clipper.Engine.pas  Clipper.Minkowski.pas  Clipper.Offset.pas  Clipper.RectClip.pas  Clipper.Triangulation.pas  Clipper.inc  Clipper.pas  Delaunay.pas
Docs/: readme.md  readme.txt
Tests/: Lines.txt  Offsets.txt  PR120.txt  Polygons.txt  PolytreeHoleOwner.txt  PolytreeHoleOwner2.txt  RectClip.txt  Tests.txt  Tests2.txt  Tests3.txt
csharp/: Clipper.Core.cs  Clipper.Engine.cs  Clipper.Offset.cs  Clipper.cs
debian/: README.Debian  changelog  control  copyright  libclipper2-1.install  libclipper2-dev.install  rules
(+102 files in other folders)
